# AlbumArchitect

./: .clang-format  .clang-tidy  .codespellrc  .dockerignore  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  Dockerfile  HACKING.md  README.md  build-docker.sh  vcpkg.json  vcpkg.ubuntu.json
.github/workflows/: ci.yml  docker_push.yaml
.run/: Docker - Build devenv.run.xml
cmake/: dev-mode.cmake  folders.cmake  install-rules.cmake  variables.cmake
cmake/overlays/opencv/: vcpkg.json
config/: config.example.yaml  config.yaml
docker/: build-clang.Dockerfile  build-gcc.Dockerfile  dev.Dockerfile
source/: commands.cpp  commands.h  lib.cpp  main.cpp
source/album/: album.cpp  album.h  album_exception.h  face_classifier.cpp  face_classifier.h  hash.cpp  hash.h  image.cpp  image.h  photo.cpp  photo.h  photo_dnn.cpp  photo_hash.h  photo_metadata.cpp  photo_metadata.h  text_classifier.cpp  text_classifier.h  util.cpp  util.h
source/analysis/: similarity_search.cpp  similarity_search.h
source/config/: config.cpp  config.h
source/files/: common.h  graph.cpp  graph.h  helper.cpp  helper.h  tree.cpp  tree.h
source/helper/: boost_serialization_cvmat.h  cv_mat_operations.h
source/support/serialize/: cvmat.h
test/: CMakeLists.txt  config.test.yaml  image-data.txt
test/source/: AlbumArchitect_test.cpp  album_test.cpp  analysis_test.cpp  common.h  files.cpp  files_test.cpp  support_test.cpp
test/source/album/: photo_test.cpp
test/source/config/: config_test.cpp
